--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -3,7 +3,7 @@ name: Cypress Parallel Tests
 on:
   push:
     branches:
-      - master
+      - "*"
 
 jobs:
   run_tests:
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '18'
+          node-version: "18"
 
       - name: Install dependencies
         run: npm install
