--- a/.github/workflows/parallel.yml
+++ b/.github/workflows/parallel.yml
@@ -25,6 +25,16 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+        
+      - name: Download the build folder
+        uses: actions/download-artifact@v3
+        with:
+          name: build
 
-      - name: Run Cypress tests
-        run: npm run ci
+      - name: Cypress run
+        uses: cypress-io/github-action@v5
+        with:
+          build: npm run build
+          record: true
+          parallel: true
+          start: npm start
