--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cypress open --e2e",
-    "ci":"npx cypress run -- --parallel --ci-build-id ${GITHUB_RUN_ID}"
+    "ci":"npx cypress run -- --parallel --ci-build-id ${GITHUB_RUN_ID} --key classkey"
   },
   "repository": {
     "type": "git",
