add scenario same cell value cannot be reassigned by the second player

--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "@cypress/browserify-preprocessor": "^3.0.2"
   },
   "cypress-cucumber-preprocessor": {
-    "stepDefinitions": "cypress/e2e/*.spec.ts"
+    "stepDefinitions": "cypress/e2e/**/*.spec.ts"
   }
 }
