--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Testing with cypress",
   "main": "index.js",
   "scripts": {
-    "test": "cypress open --e2e",
-    "ci": "npx cypress run -- --parallel --ci-build-id 1"
+    "test": "cypress open --e2e --tags ~@ignore",
+    "ci": "npx cypress run -e 'TAGS=not @ignore' -- --parallel --ci-build-id 1 "
   },
   "repository": {
     "type": "git",
